		to describe the new function.
	Bug fixes to SUSSelection.  Thanks to Uday Kamath <kamathuday@gmail.com>
	Updated MersenneTwister and MersenneTwisterFast to allow full-open, half-open
		(both directions) and fully-closed intervals for nextDouble and nextFloat
	Updated Benchmarks and Regression to generate points from fully-closed intervals
	Added MultiObjectiveFitness.getRankings(...)
	SteadyStateEvolutionState now calls postEvaluationStatistics at the end of the run
		if more than zero individuals were evaluated since the last call to the
		same method.  Thanks to Kenneth Bogert <kbogert@uga.edu>
	Improvements and bugfixes to PSOBreeder.  Thanks to Kenneth Bogert <kbogert@uga.edu>
	DoubleVectorIndividual bugfix: intermediate recombination was immediately also
		calling simulated binary crossover (due to a missing break statement).
		Thanks to Kenneth Bogert <kbogert@uga.edu>
	Improvements to the GUI.  Thanks to Kenneth Bogert <kbogert@uga.edu>
	Document fixes to Tutorial 2 and Tutorial 3
	Added new Population option to initialize from a file, just like
		Subpopulation does.
	Reindented
	Removed vestigial references to 0xffffffff in MersenneTwister and
		MersenneTwisterFast.  Thanks to Bruce Haxton <bruce.haxton@yahoo.com>
	Bugfix to GeneVectorIndividual.setGenomeLength(...) which was filling
		the wrong genome when the length was being increased.  Thanks
		to Ben Stable <bennett.stabile@gmail.com>
	Added checkpoint-directory parameter to specify the location of written
		checkpoints.  At this point this parameter has NOT been added to the GUI,
		just to the command-line (sorry). 
	Deprecated 'prefix' as a parameter.  You should instead use 'checkpoint-prefix'.
		This also hasn't been added to the GUI, just to the command-line.  This
		is deprecation -- you can still use 'prefix' for now, but you get a warning
		message.
	RegERC.toStringForHumans() now writes out the value as a double, not a float