@@ -102,7 +102,9 @@ public class ParametersPanel
                         newRow[0] = sBuff.toString();
                         Parameter param = new Parameter(newRow[0]);
                         newRow[1] = console.parameters.getString(param,null);
-                        newRow[2] = console.parameters.getLocation(param);
+                        ParameterDatabase p = console.parameters.getLocation(param);
+                        if (p == null) newRow[2] = "";
+                        else newRow[2] = p.getLabel();
                         
                         if (newRow[1] != null)
                             {
@@ -125,7 +127,9 @@ public class ParametersPanel
                             childRow[0] = newRow[0]+child;
                             Parameter param = new Parameter(childRow[0]);
                             childRow[1] = console.parameters.getString(param,null);
-                            childRow[2] = console.parameters.getLocation(param);
+                            ParameterDatabase p = console.parameters.getLocation(param);
+                            if (p == null) childRow[2] = "";
+                            else childRow[2] = p.getLabel();
                                                         
                             if (childRow[1] != null)
                                 {
